--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-cli": "^6.3.15",
     "babel-plugin-transform-async-to-generator": "^6.3.13",
+    "babel-plugin-transform-es2015-destructuring": "^6.3.15",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.3.16",
     "babel-register": "^6.3.13",
     "md5": "^2.0.0",
