--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "posttest": "haste lint"
   },
   "dependencies": {
+    "inquirer": "^4.0.1",
     "js-combinatorics": "^0.5.0",
     "md5": "^2.0.0",
     "node-fetch": "^1.3.3"
