--- a/src/template/template.spec.template
+++ b/src/template/template.spec.template
@@ -10,7 +10,7 @@ describe('template', () => {
     });
 
     it('should work for part 1 input', () => {
-      expect(day(input).shift()).to.equal(input);
+      // expect(day(input).shift()).to.equal(input);
     });
   });
 
