--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "inquirer": "^4.0.1",
     "js-combinatorics": "^0.5.0",
     "md5": "^2.0.0",
-    "node-fetch": "^1.3.3"
+    "node-fetch": "^1.3.3",
+    "single-line-log": "^1.1.2"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
