--- a/src/template/template.spec.template
+++ b/src/template/template.spec.template
@@ -3,7 +3,7 @@ const {expect} = require('chai');
 const readInput = require('../../read-input');
 const input = readInput(__filename);
 
-describe('template', () => {
+describe('template year', () => {
   describe('part1', () => {
     it('should work for part 1 examples', () => {
       expect(day('1').shift()).to.equal('1');
