--- a/src/template/day.spec.js.template
+++ b/src/template/day.spec.js.template
@@ -1,9 +1,9 @@
-const {day} = require('./template');
+const {day} = require('./{{day}}');
 const {expect} = require('chai');
 const readInput = require('../read-input');
 const input = readInput(__filename);
 
-describe('template year', () => {
+describe('{{day}} {{year}}', () => {
   describe('part1', () => {
     it('should work for part 1 examples', () => {
       expect(day('1').shift()).to.equal('1');
