--- a/src/template/day.js.template
+++ b/src/template/day.js.template
@@ -1,7 +1,10 @@
-function day(input) {
-  const part1 = input;
-  const part2 = input;
-  return [part1, part2];
+function part1(input) {
+  return input;
 }
 
-module.exports = {day};
+function part2(input) {
+  return input;
+}
+
+const day = input => [part1(input), part2(input)];
+module.exports = {day, part1, part2};
