--- a/src/template/day.spec.js.template
+++ b/src/template/day.spec.js.template
@@ -1,4 +1,4 @@
-const {day} = require('./{{day}}');
+const {part1, part2} = require('./{{day}}');
 const {expect} = require('chai');
 const readInput = require('../read-input');
 const input = readInput(__filename);
@@ -6,21 +6,21 @@ const input = readInput(__filename);
 describe.only('{{day}} {{year}}', () => {
   describe('part1', () => {
     it('should work for part 1 examples', () => {
-      expect(day('1').shift()).to.equal('1');
+      expect(part1('1')).to.equal('1');
     });
 
     it('should work for part 1 input', () => {
-      // expect(day(input).shift()).to.equal(input);
+      // expect(part1(input)).to.equal(input);
     });
   });
 
   describe('part2', () => {
     it('should work for part 2 examples', () => {
-      // expect(day('1').pop()).to.equal('1');
+      // expect(part2('1')).to.equal('1');
     });
 
     it('should work for part 2 input', () => {
-      // expect(day(input).pop()).to.equal(input);
+      // expect(part2(input)).to.equal(input);
     });
   });
 });
