--- a/src/template/day.spec.js.template
+++ b/src/template/day.spec.js.template
@@ -1,6 +1,6 @@
 const {part1, part2} = require('./{{day}}');
 const {expect} = require('chai');
-const readInput = require('../read-input');
+const readInput = require('../utils/read-input');
 const input = readInput(__filename);
 
 describe.only('{{day}} {{year}}', () => {
