--- a/src/template/day.js.template
+++ b/src/template/day.js.template
@@ -6,5 +6,4 @@ function part2(input) {
   return part1(input);
 }
 
-const day = input => [part1(input), part2(input)];
-module.exports = {day, part1, part2};
+module.exports = {part1, part2};
