--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "node src/index.js",
     "test": "haste test --jest",
     "test:mocha": "export mocha_reporter=spec && haste test",
-    "posttest": "haste lint"
+    "posttest": "haste lint",
+    "precommit": "haste lint"
   },
   "dependencies": {
     "inquirer": "^4.0.1",
@@ -15,7 +16,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "haste-cli": "^0.1.16",
-    "haste-preset-yoshi": "0.0.11"
+    "haste-preset-yoshi": "0.0.11",
+    "husky": "^0.14.3"
   },
   "haste": {
     "preset": "haste-preset-yoshi"
