--- a/src/template/day.spec.js.template
+++ b/src/template/day.spec.js.template
@@ -1,5 +1,4 @@
 const { part1, part2 } = require('./{{day}}');
-const { expect } = require('chai');
 const readInput = require('../utils/read-input');
 
 const input = readInput(__filename);
@@ -7,21 +6,21 @@ const input = readInput(__filename);
 describe('{{day}} {{year}}', () => {
   describe('part1', () => {
     it('should work for part 1 examples', () => {
-      expect(part1('1')).to.equal('1');
+      expect(part1('1')).toEqual('1');
     });
 
     it('should work for part 1 input', () => {
-      // expect(part1(input)).to.equal(input);
+      // expect(part1(input)).toEqual(input);
     });
   });
 
   describe('part2', () => {
     it('should work for part 2 examples', () => {
-      // expect(part2('1')).to.equal('1');
+      // expect(part2('1')).toEqual('1');
     });
 
     it('should work for part 2 input', () => {
-      // expect(part2(input)).to.equal(input);
+      // expect(part2(input)).toEqual(input);
     });
   });
 });
