--- a/src/template/day.html.template
+++ b/src/template/day.html.template
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8"/>
-<title>Day {{number}} - Advent of Code {{year}}</title>
+<title>Day {{day}} - Advent of Code {{year}}</title>
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="../static/style.css"/>
 <link rel="stylesheet alternate" type="text/css" href="../static/highcontrast.css" title="High Contrast"/>
