--- a/src/template/day.js.template
+++ b/src/template/day.js.template
@@ -1,9 +1,9 @@
 function part1(input) {
-  return input;
+  return 0;
 }
 
 function part2(input) {
-  return part1(input);
+  return 0;
 }
 
 module.exports = { part1, part2 };
