--- a/src/template/day.spec.js.template
+++ b/src/template/day.spec.js.template
@@ -6,21 +6,21 @@ const input = readInput(__filename);
 describe('{{day}} {{year}}', () => {
   describe('part1', () => {
     it('should work for part 1 examples', () => {
-      expect(part1('1')).toEqual('1');
+      expect(part1('1')).toEqual(0);
     });
 
     it('should work for part 1 input', () => {
-      // expect(part1(input)).toEqual(input);
+      // expect(part1(input)).toEqual(0);
     });
   });
 
   describe('part2', () => {
     it('should work for part 2 examples', () => {
-      // expect(part2('1')).toEqual('1');
+      // expect(part2('1')).toEqual(0);
     });
 
     it('should work for part 2 input', () => {
-      // expect(part2(input)).toEqual(input);
+      // expect(part2(input)).toEqual(0);
     });
   });
 });
