--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "postinstall": "yoshi lint",
     "start": "node src/index.js",
-    "test": "f(){ if [ -z \"$CI\" ]; then yoshi test --jest --onlyChanged $*; else yoshi test --jest $*; fi ;};f",
-    "precommit": "yoshi lint"
+    "test": "f(){ if [ -z \"$CI\" ]; then jest --onlyChanged $*; else jest $*; fi ;};f",
+    "precommit": "eslint src/**/*.js"
   },
   "dependencies": {
     "inquirer": "^4.0.1",
@@ -14,14 +13,30 @@
     "node-fetch": "^1.3.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "describe-heavy": "^1.0.14",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "husky": "^0.14.3",
-    "yoshi": "^3.21.0"
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-transform-modules-commonjs"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "eslintConfig": {
-    "extends": "yoshi",
-    "rules": {
-      "no-shadow": 0
-    }
+    "parser": "babel-eslint",
+    "extends": [
+      "plugin:prettier/recommended"
+    ]
   }
 }
