--- a/package.json
+++ b/package.json
@@ -38,5 +38,16 @@
     "extends": [
       "plugin:prettier/recommended"
     ]
+  },
+  "wallaby": {
+    "autoDetect": true,
+    "tests": [
+      "src/2018/day25.spec.js"
+    ],
+    "env": {
+      "params": {
+        "env": "SKIP_HEAVY=true"
+      }
+    }
   }
 }
