--- a/src/template/day.spec.js.template
+++ b/src/template/day.spec.js.template
@@ -3,7 +3,7 @@ import readInput from '../utils/read-input';
 
 const input = readInput(__filename);
 
-describe('{{day}} {{year}}', () => {
+describe.only('{{day}} {{year}}', () => {
   describe('part1', () => {
     it('should work for part 1 examples', () => {
       expect(part1('1')).toEqual(0);
