--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "inquirer": "^4.0.1",
     "js-combinatorics": "^0.5.0",
-    "node-fetch": "^1.3.3"
+    "node-fetch": "^1.3.3",
+    "progress": "^2.0.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.7.4",
