--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "describe-heavy": "^1.0.14",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^0.14.3",
     "jest": "^24.9.0",
@@ -38,6 +39,12 @@
   },
   "eslintConfig": {
     "parser": "babel-eslint",
+    "plugins": [
+      "jest"
+    ],
+    "rules": {
+      "jest/no-focused-tests": "error"
+    },
     "extends": [
       "plugin:prettier/recommended"
     ]
