--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "quoteProps": "consistent"
   },
   "wallaby": {
     "autoDetect": true,
