--- a/package.json
+++ b/package.json
@@ -8,36 +8,29 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "test": "f(){ if [ -z \"$CI\" ]; then jest --onlyChanged $*; else jest $*; fi ;};f",
+    "test": "f(){ if [ -z \"$CI\" ]; then npm run jest -- --onlyChanged $*; else npm run jest -- $*; fi ;};f",
+    "jest": "node --experimental-vm-modules node_modules/.bin/jest",
     "lint": "eslint src/**/*.js"
   },
   "dependencies": {
-    "inquirer": "^7.0.0",
+    "inquirer": "^7.3.3",
     "js-combinatorics": "^0.5.0",
-    "node-fetch": "^1.3.3",
+    "node-fetch": "^2.6.1",
     "progress": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.0.0",
-    "babel-plugin-transform-import-meta": "^1.0.0",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^4.0.0",
-    "jest": "^25.0.0",
-    "prettier": "^1.19.1"
-  },
-  "babel": {
-    "plugins": [
-      "babel-plugin-transform-import-meta",
-      "@babel/plugin-transform-modules-commonjs"
-    ]
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.0"
   },
   "eslintConfig": {
-    "parser": "babel-eslint",
+    "parserOptions": {
+      "sourceType": "module"
+    },
     "env": {
       "node": true,
       "es2020": true
@@ -63,7 +56,8 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
-    "quoteProps": "consistent"
+    "quoteProps": "consistent",
+    "arrowParens": "avoid"
   },
   "wallaby": {
     "autoDetect": true,
