--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint src/**/*.js"
   },
   "dependencies": {
+    "@zonda/inquirer-timeout-confirm-prompt": "^0.1.1",
     "inquirer": "^7.3.3",
     "js-combinatorics": "^0.5.0",
     "node-fetch": "^2.6.1",
