--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "f(){ if [ -z \"$CI\" ]; then jest --onlyChanged $*; else jest $*; fi }; NODE_OPTIONS=--experimental-vm-modules f",
-    "lint": "eslint src",
+    "lint": "eslint src && tsc",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -20,6 +20,8 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.3.0",
@@ -27,7 +29,8 @@
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^12.1.2",
-    "prettier": "^2.5.0"
+    "prettier": "^2.5.0",
+    "typescript": "^4.5.2"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -40,7 +43,8 @@
     "extends": [
       "eslint:recommended",
       "plugin:jest/recommended",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
+      "plugin:@typescript-eslint/recommended"
     ]
   },
   "prettier": {
