--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "esnext",
     "allowJs": true,
     "checkJs": true,
-    "noEmit": true
+    "noEmit": true,
+    // "strict": true,
   },
   "exclude": [
     "node_modules",
