--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@shahata/inquirer-timeout-confirm-prompt": "^0.1.1",
+    "chart.js": "^4.1.2",
     "combinatorial-generators": "^1.1.2",
+    "es-module-shims": "^1.6.3",
     "inquirer": "^9.1.4",
+    "node-forge": "^1.3.1",
     "progress": "^2.0.3"
   },
   "devDependencies": {
