--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     // "strict": true,
   },
   "exclude": [
