--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,12 +4,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - id: nvm
-      run: echo ::set-output name=NVMRC::$(cat .nvmrc)
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: '${{ steps.nvm.outputs.NVMRC }}'
+        node-version-file: '.nvmrc'
     - run: npm ci
     - run: npm run lint
     - run: npm test
