--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ src/utils/leaderboards.json
 node_modules
 *npm-debug.log
 .DS_Store
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
