--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.0.0",
