--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
     "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "eslint": "^8.55.0",
@@ -33,6 +32,7 @@
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "playwright": "^1.40.1",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2"
   },
