--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "@playwright/browser-chromium": "^1.40.1",
     "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "eslint": "^8.55.0",
