--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "es-module-shims": "^1.8.2",
     "inquirer": "^9.2.12",
     "node-forge": "^1.3.1",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "z3-solver": "^4.12.4"
   },
   "devDependencies": {
     "@playwright/browser-chromium": "^1.40.1",
@@ -59,7 +60,8 @@
   "jest": {
     "testPathIgnorePatterns": [
       "<rootDir>/src/template"
-    ]
+    ],
+    "forceExit": true
   },
   "prettier": {
     "singleQuote": true,
