--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.3.0",
+    "@graph-algorithm/minimum-cut": "^2.0.0",
     "@shahata/inquirer-timeout-confirm-prompt": "^0.1.1",
     "chart.js": "^4.4.0",
     "combinatorial-generators": "^1.1.2",
