--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "inquirer": "^9.2.12",
     "node-forge": "^1.3.1",
     "progress": "^2.0.3",
+    "regenerator-runtime": "^0.14.1",
     "z3-solver": "^4.12.4"
   },
   "devDependencies": {
