--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "serve": "open https://127.0.0.1/ && http-server -p 443 -P https://127.0.0.1/ -S",
+    "serve": "http-server -p 443 -S -o",
     "test": "f(){ if [ -z \"$CI\" ]; then jest --onlyChanged $*; else jest $*; fi }; NODE_OPTIONS=--experimental-vm-modules f",
     "lint": "eslint src && tsc",
     "prepare": "husky install"
