--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
     "serve": "http-server -p 443 -S -o -c-1 -C static/http-cert.pem -K static/http-key.pem",
     "test": "f(){ if [ -z \"$CI\" ]; then jest --onlyChanged $*; else jest $*; fi }; NODE_OPTIONS=--experimental-vm-modules f",
     "lint": "eslint src && tsc",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.3.1",
     "@graph-algorithm/minimum-cut": "^2.0.0",
     "@shahata/inquirer-timeout-confirm-prompt": "^0.1.1",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
     "combinatorial-generators": "^1.1.2",
-    "es-module-shims": "^1.8.2",
-    "inquirer": "^9.2.18",
+    "es-module-shims": "^1.10.0",
+    "inquirer": "^9.2.23",
     "node-forge": "^1.3.1",
     "progress": "^2.0.3",
     "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
-    "@playwright/browser-chromium": "^1.43.1",
+    "@playwright/browser-chromium": "^1.44.1",
     "@types/jest": "^29.5.12",
-    "eslint": "^9.0.0",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.2.0",
+    "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-prettier": "^5.1.3",
     "http-server": "^14.1.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
-    "playwright": "^1.43.1",
+    "playwright": "^1.44.1",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
   },
