--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.3.1",
     "@graph-algorithm/minimum-cut": "^2.0.0",
-    "@shahata/inquirer-timeout-confirm-prompt": "^0.1.1",
+    "@inquirer/core": "^9.2.1",
+    "@inquirer/prompts": "^6.0.1",
+    "@shahata/inquirer-timeout-confirm-prompt": "^1.0.0",
     "chart.js": "^4.4.3",
     "combinatorial-generators": "^1.1.2",
     "es-module-shims": "^1.10.0",
-    "inquirer": "^9.2.23",
     "node-forge": "^1.3.1",
     "progress": "^2.0.3",
     "regenerator-runtime": "^0.14.1"
