--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "es-module-shims": "^1.10.0",
     "node-forge": "^1.3.1",
     "progress": "^2.0.3",
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.14.1",
+    "z3-solver": "^4.13.3"
   },
   "devDependencies": {
     "@playwright/browser-chromium": "^1.47.2",
