--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   },
   "devDependencies": {
     "@playwright/browser-chromium": "^1.47.2",
+    "@vitest/eslint-plugin": "^1.1.27",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vitest": "^0.5.4",
     "http-server": "^14.1.1",
     "husky": "^9.1.6",
     "playwright": "^1.49.1",
