--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.3.1",
+    "@flatten-js/core": "^1.6.8",
     "@graph-algorithm/minimum-cut": "^2.0.0",
     "@shahata/inquirer-timeout-confirm-prompt": "^1.0.1",
     "chart.js": "^4.5.0",
