--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "deno": "deno run --allow-env --allow-net --allow-read server/local.js",
+    "deno": "deno run --allow-env --allow-net --allow-read src/server/local.js",
     "serve": "http-server -p 443 -S -o -c-1 -C static/http-cert.pem -K static/http-key.pem",
     "test": "if [ -z \"$CI\" ]; then vitest run --changed $*; else vitest run $*; fi",
     "lint": "eslint src"
